<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="@dimen/padding_panel"
    android:paddingBottom="14dp"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/nombre"
        style="@style/Texto.Titulo.Equipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="Rocho"
        xmlns:tools="http://schemas.android.com/tools" />

    <TextView
        android:id="@+id/zona"
        style="@style/Texto.Kicker.Zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_medio"
        android:text="@string/malas" />

    <TextView
        android:id="@+id/puntaje"
        style="@style/Texto.Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_medio"
        android:text="0" />

    <com.frangomez.buenasymalas.ui.ScoreBoardView
        android:id="@+id/marcador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_medio" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/restar"
            android:layout_width="@dimen/boton_punto_ancho"
            android:layout_height="@dimen/boton_punto_alto"
            android:background="@drawable/bg_boton_menos"
            android:fontFamily="@font/archivo"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/tiza_45"
            android:gravity="center"
            android:text="@string/menos" />

        <TextView
            android:id="@+id/sumar"
            android:layout_width="@dimen/boton_punto_ancho"
            android:layout_height="@dimen/boton_punto_alto"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_boton_mas"
            android:fontFamily="@font/archivo"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/tiza"
            android:gravity="center"
            android:text="@string/mas" />
    </LinearLayout>
</LinearLayout>
